--- a/tree/tree/tree/tree.vcxproj.filters
+++ b/tree/tree/tree/tree.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="btree.cpp">
+    <ClCompile Include="exp7-4.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
