--- a/tree/tree/tree/tree.vcxproj
+++ b/tree/tree/tree/tree.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="exp7-4.cpp" />
+    <ClCompile Include="exp7-5+.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
