--- a/graph/graph/graph.vcxproj.filters
+++ b/graph/graph/graph.vcxproj.filters
@@ -23,7 +23,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="graph.cpp">
+    <ClCompile Include="exp8-5.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
